# adventofcode

./: .gitignore  aoc_1.py  aoc_6.py  pyproject.toml
2022/: aoc_2.py  aoc_3.py  aoc_4.py  aoc_5.py  aoc_7.py  aoc_8.py  aoc_9.py
