[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["teonat <25981683+teonat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
